ContrastHighInverse: Fix Caja rename labels when theme actually applied

--- a/desktop-themes/ContrastHighInverse/gtk-3.0/mate-applications.css
+++ b/desktop-themes/ContrastHighInverse/gtk-3.0/mate-applications.css
@@ -56,6 +56,7 @@ CajaNavigationWindow.background .view.caja-canvas-item {
    border-style: solid;
    border-width: 1px;
    border-color: @theme_fg_color;
+   color: @theme_fg_color;
    box-shadow: none;
    border-radius: 2px;
    text-shadow: none;
